# HCL

./: CHANGELOG.md  README.md  debug_key_expansion.ml  debug_simple.py  debug_subbytes.ml  dune-project  generate_correct_vectors.py  verify_aes_zeros.py
_build/: .db  .digest-db  log
_build/default/: HCL.dune-package  HCL.install  HCL.opam  META.HCL
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/1178c2f4345967f1352884d11f0bfb7f/: dune__exe___ppx.cmo
_build/default/.ppx/57ef275c515ec1fe105f6ff0979f5a61/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: hcl.cma  hcl.cmxa  hcl.cmxs  hcl.pp.ml
_build/default/lib/.hcl.objs/byte/: hcl.cmi  hcl.cmo  hcl.cmt
_build/default/lib/.hcl.objs/native/: hcl.cmx
_build/default/lib/.merlin-conf/: lib-HCL
_build/default/lib/primitives/: primitives.cma  primitives.cmxa  primitives.cmxs
_build/default/lib/primitives/.merlin-conf/: lib-HCL.primitives
_build/default/lib/utils/: test_helpers.ml  test_helpers.pp.ml  utils.cma  utils.cmxa  utils.cmxs  utils.ml-gen
_build/default/lib/utils/.merlin-conf/: lib-HCL.utils
_build/default/test/: test_HCL.pp.ml
_build/default/test/.merlin-conf/: exe-test_HCL
_build/install/default/lib/HCL/: META  (+9 more)
debug/: debug_key_expansion.ml  debug_subbytes.ml
design/: aes_implementation.md
examples/arty_a7_100t/: plans.md
lib/: dune
lib/primitives/: dune
lib/primitives/block_ciphers/AES/: aes.ml  dune
lib/utils/: dune  test_helpers.ml
test/: dune
test/test_primitives/test_block_ciphers/test_aes/: dune  test_aes.ml
(+50 files in other folders)
